# TAMUHACK

./: README.md  floors.csv  index.html  pyproject.toml  requirements.txt  team_conflicts.csv
FlaskProject/: Algorithm.py  app.py  floors.csv  strength.csv  team_conflicts.csv
FlaskProject/.azure/: config
FlaskProject/static/: stylesheet.css
FlaskProject/templates/: TableTest.html  base.html  navbar.html  preference.html  setting.html  teams.html
react-frontend/: package-lock.json
react-frontend/src/: App.css  App.js
