[tool.poetry]
name = "tamuhack"
version = "0.1.0"
description = ""
authors = ["Jason Antwi-Appah <hey@jasonaa.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
Flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
